some more small changes

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   font-weight: 100;
   font-family: sans-serif;
+  align: center;
 }
 
 h1{
@@ -9,29 +10,41 @@ h1{
 }
 
 .inputField {
-  width: 100%;
+  /* width: 100%; */
   font-size: 2em;
   /* margin-left: 5%; */
   /* margin-right:5%; */
 }
 
+p{
+  text-align: left;
+}
+
+textarea{
+  font-family: sans-serif;
+}
+
 button{
-  width: 100%;
+  /* width: 100%; */
   border: none;
   background: black;
   color: white;
-  padding: 20px;
-  font-size: 3em;
+  padding: 10px;
+  margin-top: 20px;
+  padding-left: 147px;
+  padding-right: 147px;
+  font-size: 2em;
   transition: color 0.5s, background 0.5s;
 }
 
 button:hover{
-  background: white;
-  color: black;
+  background: #aaaaaa;
+  /* color: black; */
 
 }
 
 .output{
-  text-align: center;
-  font-size: 3em;
+  text-decoration: underline;
+  text-align: left;
+  font-size: 1em;
 }
